@@ -1003,6 +1003,75 @@ Python-specific usage examples; begun with "&gt;&gt;&gt;"
                         </tbody>
                     </tgroup>
                 </table>
+                <paragraph>With the "widths" argument "auto" (or "class" value "colwidths-auto"),
+                    column widths are determined by the backend (if supported by the
+                    writer/backend).</paragraph>
+                <table classes="colwidths-auto">
+                    <tgroup cols="3">
+                        <colspec colwidth="7"></colspec>
+                        <colspec colwidth="7"></colspec>
+                        <colspec colwidth="10"></colspec>
+                        <thead>
+                            <row>
+                                <entry>
+                                    <paragraph>A</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>B</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>A or B</paragraph>
+                                </entry>
+                            </row>
+                        </thead>
+                        <tbody>
+                            <row>
+                                <entry>
+                                    <paragraph>False</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>False</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>False</paragraph>
+                                </entry>
+                            </row>
+                            <row>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>False</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                            </row>
+                            <row>
+                                <entry>
+                                    <paragraph>False</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                            </row>
+                            <row>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                                <entry>
+                                    <paragraph>True</paragraph>
+                                </entry>
+                            </row>
+                        </tbody>
+                    </tgroup>
+                </table>
             </section>
             <section ids="admonitions" names="admonitions">
                 <title auto="1" refid="id76"><generated classes="sectnum">2.14.3   </generated>Admonitions</title>
@@ -1604,10 +1673,10 @@ Comments may contain non-ASCII characters: ä ö ü æ ø å</comment>
         <system_message level="1" line="475" source="functional/input/data/standard.txt" type="INFO">
             <paragraph>Hyperlink target "image-target-3" is not referenced.</paragraph>
         </system_message>
-        <system_message level="1" line="667" source="functional/input/data/standard.txt" type="INFO">
+        <system_message level="1" line="682" source="functional/input/data/standard.txt" type="INFO">
             <paragraph>Hyperlink target "docutils" is not referenced.</paragraph>
         </system_message>
-        <system_message level="1" line="788" source="functional/input/data/standard.txt" type="INFO">
+        <system_message level="1" line="803" source="functional/input/data/standard.txt" type="INFO">
             <paragraph>Hyperlink target "hyperlink targets" is not referenced.</paragraph>
         </system_message>
     </section>
